v3/runnerDeployment.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: siddhi-runner-1
  labels:
    app: siddhi-runner-1
    node: siddhi-runner-1
    pattern: wso2sp-pattern-distributed
spec:
  # strategy:
    # type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: siddhi-runner-1
        node: siddhi-runner-1
        pattern: wso2sp-pattern-distributed
    spec:
      containers:
      -
        image: senthuran16/siddhi-runner:1.0
        name: siddhi-runner-1
        # command: ['sh', '-c', 'sleep 40 && /home/wso2carbon/init.sh']
        ports:
          -
            containerPort: 9443
            protocol: "TCP"
        # - containerPort: 80
        # # env:
        # # -
        # #   name: WSO2_SERVER_PROFILE
        # #   value: "worker"
        # # -
        # #   name: OFFSET
        # #   value: "0"
        # # -
        # #   name: RECEIVER_NODE
        # #   value: "false"
        # # -
        # #   name: NODE_IP
        # #   valueFrom:
        # #     fieldRef:
        # #       fieldPath: status.podIP
        # # -
        # #   name: NODE_PORT
        # #   value: "9443"
        #
        # # ports:
        # -
        #   containerPort: 9443
        #   protocol: "TCP"
        # # -
        # #   containerPort: 9543
        # #   protocol: "TCP"
        # # -
        # #   containerPort: 9544
        # #   protocol: "TCP"
        # -
        #   containerPort: 9711
        #   protocol: "TCP"
        # -
        #   containerPort: 9611
        #   protocol: "TCP"
        # -
        #   containerPort: 7711
        #   protocol: "TCP"
        # -
        #   containerPort: 7611
        #   protocol: "TCP"
        # -
        #   containerPort: 7070
        #   protocol: "TCP"
        # -
        #   containerPort: 7443
        #   protocol: "TCP"
        # volumeMounts:
        # - name: sp-worker-conf
        #   mountPath: "/home/wso2carbon/wso2-config-volume/conf/worker/"
        # - name: sp-worker-bin
        #   mountPath: "/home/wso2carbon/kubernetes-volumes/worker/bin/"
      #   livenessProbe:
      #     tcpSocket:
      #       port: 9090
      #     initialDelaySeconds: 300
      #     periodSeconds: 20
      # volumes:
      # - name: sp-worker-conf
      #   configMap:
      #     name: sp-worker-conf
      # - name: sp-worker-bin
      #   configMap:
      #     name: sp-worker-bin
