v3/runnerService.yaml
apiVersion: v1
kind: Service
metadata:
  name: siddhi-runner-1
  labels:
    node: siddhi-runner-1
    pattern: wso2sp-pattern-distributed
spec:
  # type: LoadBalancer
  ports:
    # ports that this service should serve on
    - name: 'http-port-1'
      port: 9443
      protocol: TCP

  # label keys and values that must match in order to receive traffic for this service
  selector:
    node: siddhi-runner-1
    pattern: wso2sp-pattern-distributed
  # clusterIP: None
